<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/first_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_value"
        android:inputType="number"
        android:paddingBottom="16dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/second_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_value"
        android:inputType="number"
        android:paddingBottom="16dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/result"
        android:textSize="16sp" />

    <Button
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sum" />

    <Button
        android:id="@+id/subtraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtraction" />

    <Button
        android:id="@+id/division"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/division" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplication" />

</LinearLayout>